Thu Feb 19 03:05:49 2004  Minero Aoki  <aamine@loveruby.net>

	* ext/strscan/strscan.c: StringScanner#restsize is obsolete;
	  use #rest_size instead.

	* ext/strscan/strscan.c: StringScanner#matchedsize is obsolete;
	  use #matched_size instead.

Thu Feb 19 02:42:19 2004  Minero Aoki  <aamine@loveruby.net>

	* ext/strscan/strscan.c: don't use rb_eval_string, it defines
	  classes under the module when required in module clauses.
	  [ruby-dev:22951]

Thu Feb 19 02:37:28 2004  Minero Aoki  <aamine@loveruby.net>

	* ext/strscan/strscan.c: merge documentation from 1.8 branch.
	  Thanks Gavin Sinclair.

Wed Feb 19 00:20:00 2004  Gavin Sinclair <gsinclair@soyabean.com.au>

	* lib/cgi-lib.rb:   deprecated after 1.8.1

	* lib/getopts.rb:   ditto

	* lib/importenv.rb: ditto

	* lib/parsearg.rb:  ditto

Thu Feb 19 00:11:05 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/markup/simple_markup/preprocess.rb (SM::PreProcess::handle): 
	  Strip extraneous space from filenames in :include:

Wed Feb 18 22:53:41 2004  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/drb/unix.rb: remove O_NONBLOCk, thanks \ay

Wed Feb 18 22:42:19 2004  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* test/rinda/test_rinda.rb: improt test_rinda.rb

Wed Feb 18 22:03:11 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* test/*: should not depend on $KCODE.

Wed Feb 18 18:07:09 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_sprintf.rb: added tests.

Wed Feb 18 17:18:01 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/win32ole/win32ole.c: need to include <olectl.h> on Cygwin.

Wed Feb 18 10:23:34 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* sprintf.c (rb_f_sprintf): clean up.

Tue Feb 17 23:40:34 2004  Guy Decoux  <ts@moulon.inra.fr>

	* sprintf.c (rb_f_sprintf): preserve original val for
	  format_integer. [ruby-talk:92975]

Tue Feb 17 23:28:45 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* test/soap/marshal/test_marshal.rb, test/ruby/test_marshal.rb: do $: